--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
   <!-- My Style -->
-  <link rel="stylesheet" href="./style/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
@@ -82,32 +82,32 @@ Ulang tahun adalah saat untuk merayakan keberadaanmu di dunia ini. Semoga hari i
                 <img src="ballon2.svg" alt="" />
                 <img src="ballon3.svg" alt="" />
                 <img src="ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon2.svg" alt="" />
+                <img src="ballon1.svg" alt="" />
+                <img src="ballon3.svg" alt="" />
             </div>
         </div>
 
@@ -153,6 +153,6 @@ Ulang tahun adalah saat untuk merayakan keberadaanmu di dunia ini. Semoga hari i
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <!-- Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="application/javascript" src="./script/main.js"></script>
+    <script type="application/javascript" src="main.js"></script>
 
 </html>
